--- a/project.properties
+++ b/project.properties
@@ -11,13 +11,12 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-16
-android.library.reference.3=../../AndroidLibrarys/ColorPickerPreferenceSupportHoloLibrary
-android.library.reference.4=../../AndroidLibrarys/ViewPagerIndicatorLibrary
-android.library.reference.1=../../AndroidLibrarys/ActionbarSherlockLibrary
-android.library.reference.2=../../AndroidLibrarys/AppMsgLibrary
-android.library.reference.6=../../AndroidLibrarys/HoloEveryWhereLibrary
-android.library.reference.5=../../AndroidLibrarys/StickyHeaderLibrary
-android.library.reference.7=../../AndroidLibrarys/DragSortListViewLibrary
-android.library.reference.8=../../AndroidLibrarys/weibo_android_sdk/weibo.sdk.android.sso.demo
-android.library.reference.9=../../AndroidLibrarys/SlidingMenuLibrary
+target=android-18
+android.library.reference.3=..\\little-bear-dictionary-dependency\\libraries\\SlidingMenuLibrary
+android.library.reference.4=..\\little-bear-dictionary-dependency\\libraries\\ColorPickerPreferenceSupportHoloLibrary
+android.library.reference.1=..\\little-bear-dictionary-dependency\\libraries\\ActionbarSherlockLibrary
+android.library.reference.2=..\\little-bear-dictionary-dependency\\libraries\\AppMsgLibrary
+android.library.reference.6=..\\little-bear-dictionary-dependency\\libraries\\HoloEveryWhereLibrary
+android.library.reference.5=..\\little-bear-dictionary-dependency\\libraries\\DragSortListViewLibrary
+android.library.reference.8=..\\little-bear-dictionary-dependency\\libraries\\StickyHeaderLibrary
+android.library.reference.7=..\\little-bear-dictionary-dependency\\libraries\\ViewPagerIndicatorLibrary
